@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="https://github.com/pfpayments/woocommerce/releases/tag/2.0.1/">
+		<a href="https://github.com/pfpayments/woocommerce/releases/tag/2.0.2/">
 			Source
 		</a>
 	</li>
