@@ -427,3 +427,5 @@ Numerous fixes to meet Wordpress community standards and guidelines
 
 Travis build fix for deployment
 
+Travis build fix for deployment
+
